--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5500
 MONG_URI=mongodb+srv://habib:Password123@mernapp.jqldc7c.mongodb.net/?retryWrites=true&w=majority
+SECRET=asdqwefgsdknkaskjwtokenbibudmbrowserchm
